# Qwen_Layers_Diffuser_Pipeline_Comfyui

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  test_qwen_layered.py
nodes/: __init__.py  eric_qwen_decompose.py  eric_qwen_layer_describe.py  eric_qwen_layer_load.py  eric_qwen_layer_save.py  eric_qwen_layer_utils.py  eric_qwen_native.py  eric_qwen_rgba_vae.py
web/: placeholder.js
workflows/: Qwen-Layered-Eric-Nice-1225.json  qwen_layered_diffusers_workflow.json  qwen_layered_native_workflow.json
